# CLA300

./: README.md  SpeedCalculator.cpp  SpeedCalculator.h
Code/Lesson1/Exercise10/: arrayPlay.Bad.cpp
Extras/Lesson3/Fig3/: scope.cpp
Extras/Lesson4/: CMakeLists.txt
Extras/Lesson4/Variadic/: variadic.cpp
Extras/Lesson6/: CMakeLists.txt
Extras/Lesson7/Activity01/: Util.cpp
Lesson1/: README.md
Lesson3/: CMakeLists.txt
Lesson3/SmartPointer/: smartptr.cpp
Lesson5/: CMakeLists.txt
Lesson6/: Test.txt
Lesson7/Activity01/: ParseFileTestCases.cpp  Test.make
Lesson7/Exercise6/: Main.cpp  Stack.h  Test.make
Lesson8/Exercise03/: fixPerf.sh
